samples/_failures_safe/1761544750_51322e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85b5054f.c: In function ‘main’:
./samples/SAFE/__tmp_85b5054f.c:164:19: error: missing terminating " character
  164 |         if (scanf("%d %
      |                   ^~~~~
./samples/SAFE/__tmp_85b5054f.c:164:9: error: expected expression at end of input
  164 |         if (scanf("%d %
      |         ^~
./samples/SAFE/__tmp_85b5054f.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85b5054f.c:164:9: error: expected declaration or statement at end of input
